--- a/css/style.css
+++ b/css/style.css
@@ -67,6 +67,11 @@ h2 {
     box-shadow: 0px 20px 20px rgba(0,0,0,.25);
 }
 
+.boximg {
+    background: white;
+    box-shadow: 0px 20px 20px rgba(0,0,0,.25);
+}
+
 .line{
     width: 40px;
     height: 6px;
